--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,9 @@ razorpay = "1.6.40"
 datastore = "1.1.1"
 room = "2.6.1"
 ksp = "1.8.10-1.0.9"
+googleService = "4.4.2"
+firebaseBom = "32.5.0"
+crashlytics = "3.0.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -66,6 +69,9 @@ datastore-preference = { group = "androidx.datastore", name = "datastore-prefere
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics"}
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -76,4 +82,6 @@ jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrai
 android-library = { id = "com.android.library", version.ref = "agp" }
 bleMeter-core-network = { id = "com.example.network"}
 google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+google-service = { id = "com.google.gms.google-services", version.ref = "googleService"}
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
 
