--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.4.1"
-kotlin = "1.9.0"
+agp = "8.5.2"
+kotlin = "2.1.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -10,7 +10,7 @@ activityCompose = "1.8.0"
 composeBom = "2023.08.00"
 serialization = "1.6.2"
 serializationPlugin = "1.9.22"
-hiltVersion = "2.52"
+hiltVersion = "2.55"
 composeMaterial3 = "1.2.1"
 accompanistPermissions = "0.32.0"
 lifecycleVersion = "2.6.2"
@@ -22,14 +22,16 @@ lottieVersion = "6.5.1"
 jetbrainsKotlinJvm = "1.9.0"
 appcompat = "1.6.1"
 material = "1.10.0"
-ktor = "2.3.12"
+ktor = "3.0.3"
 razorpay = "1.6.40"
-datastore = "1.1.1"
+datastore = "1.1.3"
 room = "2.6.1"
-ksp = "1.8.10-1.0.9"
+ksp = "2.1.0-1.0.29"
 googleService = "4.4.2"
 firebaseBom = "32.5.0"
 crashlytics = "3.0.3"
+supabaseBom = "3.1.1"
+composePlugin = "1.7.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -72,6 +74,9 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics"}
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics"}
+supabase-bom = { group = "io.github.jan-tennert.supabase", name = "bom", version.ref="supabaseBom"}
+supabase-postgrest = { group = "io.github.jan-tennert.supabase", name = "postgrest-kt"}
+supabase-auth = { group = "io.github.jan-tennert.supabase", name = "auth-kt"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -84,4 +89,6 @@ bleMeter-core-network = { id = "com.example.network"}
 google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 google-service = { id = "com.google.gms.google-services", version.ref = "googleService"}
 firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
 
