--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         tools:node="replace"/>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:name=".BLEMeterApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
